Implement subsea infrastructure section summary diffing