@@ -1,18 +1,25 @@
 package uk.co.ogauthority.pathfinder.service.project.subseainfrastructure;
 
-import static java.util.Map.entry;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import uk.co.ogauthority.pathfinder.model.entity.project.ProjectDetail;
+import uk.co.ogauthority.pathfinder.model.view.subseainfrastructure.SubseaInfrastructureView;
 import uk.co.ogauthority.pathfinder.model.view.subseainfrastructure.SubseaInfrastructureViewUtil;
+import uk.co.ogauthority.pathfinder.model.view.summary.ProjectSectionSummary;
+import uk.co.ogauthority.pathfinder.service.difference.DifferenceService;
 import uk.co.ogauthority.pathfinder.testutil.ProjectUtil;
 import uk.co.ogauthority.pathfinder.testutil.SubseaInfrastructureTestUtil;
 
@@ -22,13 +29,19 @@ public class SubseaInfrastructureSectionSummaryServiceTest {
   @Mock
   private SubseaInfrastructureService subseaInfrastructureService;
 
+  @Mock
+  private DifferenceService differenceService;
+
   private SubseaInfrastructureSectionSummaryService subseaInfrastructureSectionSummaryService;
 
   private final ProjectDetail detail = ProjectUtil.getProjectDetails();
 
   @Before
   public void setup() {
-    subseaInfrastructureSectionSummaryService = new SubseaInfrastructureSectionSummaryService(subseaInfrastructureService);
+    subseaInfrastructureSectionSummaryService = new SubseaInfrastructureSectionSummaryService(
+        subseaInfrastructureService,
+        differenceService
+    );
   }
 
   @Test
@@ -49,39 +62,73 @@ public class SubseaInfrastructureSectionSummaryServiceTest {
   public void getSummary() {
     var subseaInfrastructure1 = SubseaInfrastructureTestUtil.createSubseaInfrastructure_withDevUkFacility();
     var subseaInfrastructure2 = SubseaInfrastructureTestUtil.createSubseaInfrastructure_withManualFacility();
-    when(subseaInfrastructureService.getSubseaInfrastructures(detail)).thenReturn(List.of(
-        subseaInfrastructure1,
-        subseaInfrastructure2
-    ));
-    var sectionSummary = subseaInfrastructureSectionSummaryService.getSummary(detail);
-    var model = sectionSummary.getTemplateModel();
-    assertThat(sectionSummary.getDisplayOrder()).isEqualTo(SubseaInfrastructureSectionSummaryService.DISPLAY_ORDER);
-    assertThat(sectionSummary.getSidebarSectionLinks()).isEqualTo(List.of(SubseaInfrastructureSectionSummaryService.SECTION_LINK));
-    assertThat(sectionSummary.getTemplatePath()).isEqualTo(SubseaInfrastructureSectionSummaryService.TEMPLATE_PATH);
-
-    var subseaInfrastructureView1 = SubseaInfrastructureViewUtil.from(subseaInfrastructure1, 1);
-    var subseaInfrastructureView2 = SubseaInfrastructureViewUtil.from(subseaInfrastructure2, 2);
-
-    assertThat(model).containsOnly(
-        entry("sectionTitle", SubseaInfrastructureSectionSummaryService.PAGE_NAME),
-        entry("sectionId", SubseaInfrastructureSectionSummaryService.SECTION_ID),
-        entry("subseaInfrastructureViews", List.of(subseaInfrastructureView1, subseaInfrastructureView2))
+    var previousSubseaInfrastructures = List.of(subseaInfrastructure1, subseaInfrastructure2);
+    var previousSubseaInfastructureViews = List.of(
+        SubseaInfrastructureViewUtil.from(subseaInfrastructure1, 1),
+        SubseaInfrastructureViewUtil.from(subseaInfrastructure2, 2)
     );
+
+    var subseaInfrastructure3 = SubseaInfrastructureTestUtil.createSubseaInfrastructure_withDevUkFacility();
+    var currentSubseaInfrastructures = List.of(subseaInfrastructure3);
+    var currentSubseaInfrastructureViews = List.of(
+        SubseaInfrastructureViewUtil.from(subseaInfrastructure3, 1)
+    );
+
+    when(subseaInfrastructureService.getSubseaInfrastructures(detail)).thenReturn(currentSubseaInfrastructures);
+    when(subseaInfrastructureService.getSubseaInfrastructuresByProjectAndVersion(
+        detail.getProject(),
+        detail.getVersion() - 1
+    )).thenReturn(previousSubseaInfrastructures);
+    var sectionSummary = subseaInfrastructureSectionSummaryService.getSummary(detail);
+
+    assertModelProperties(sectionSummary);
+    assertInteractions(currentSubseaInfrastructureViews, previousSubseaInfastructureViews);
   }
 
   @Test
   public void getSummary_noSubseaInfrastructures() {
     when(subseaInfrastructureService.getSubseaInfrastructures(detail)).thenReturn(Collections.emptyList());
-    var sectionSummary = subseaInfrastructureSectionSummaryService.getSummary(detail);
-    var model = sectionSummary.getTemplateModel();
-    assertThat(sectionSummary.getDisplayOrder()).isEqualTo(SubseaInfrastructureSectionSummaryService.DISPLAY_ORDER);
-    assertThat(sectionSummary.getSidebarSectionLinks()).isEqualTo(List.of(SubseaInfrastructureSectionSummaryService.SECTION_LINK));
-    assertThat(sectionSummary.getTemplatePath()).isEqualTo(SubseaInfrastructureSectionSummaryService.TEMPLATE_PATH);
 
-    assertThat(model).containsOnly(
-        entry("sectionTitle", SubseaInfrastructureSectionSummaryService.PAGE_NAME),
-        entry("sectionId", SubseaInfrastructureSectionSummaryService.SECTION_ID),
-        entry("subseaInfrastructureViews", Collections.emptyList())
+    var sectionSummary = subseaInfrastructureSectionSummaryService.getSummary(detail);
+
+    assertModelProperties(sectionSummary);
+
+    verify(differenceService, never()).differentiate(any(), any(), any());
+  }
+
+  private void assertModelProperties(ProjectSectionSummary projectSectionSummary) {
+    assertThat(projectSectionSummary.getDisplayOrder()).isEqualTo(SubseaInfrastructureSectionSummaryService.DISPLAY_ORDER);
+    assertThat(projectSectionSummary.getSidebarSectionLinks()).isEqualTo(List.of(SubseaInfrastructureSectionSummaryService.SECTION_LINK));
+    assertThat(projectSectionSummary.getTemplatePath()).isEqualTo(SubseaInfrastructureSectionSummaryService.TEMPLATE_PATH);
+
+    var model = projectSectionSummary.getTemplateModel();
+
+    assertThat(model).containsOnlyKeys(
+        "sectionTitle",
+        "sectionId",
+        "subseaInfrastructureDiffModel"
     );
+
+    assertThat(model).containsEntry("sectionTitle", SubseaInfrastructureSectionSummaryService.PAGE_NAME);
+    assertThat(model).containsEntry("sectionId", SubseaInfrastructureSectionSummaryService.SECTION_ID);
+  }
+
+  private void assertInteractions(List<SubseaInfrastructureView> currentSubseaInfrastructureViews,
+                                  List<SubseaInfrastructureView> previousSubseaInfrastructureViews) {
+
+    currentSubseaInfrastructureViews.forEach(subseaInfrastructureView -> {
+
+      var previousSubseaInfrastructureView = previousSubseaInfrastructureViews
+          .stream()
+          .filter(view -> view.getDisplayOrder().equals(subseaInfrastructureView.getDisplayOrder()))
+          .findFirst()
+          .orElse(new SubseaInfrastructureView());
+
+      verify(differenceService, times(1)).differentiate(
+          subseaInfrastructureView,
+          previousSubseaInfrastructureView,
+          Set.of("summaryLinks")
+      );
+    });
   }
 }
